[package]
name = "minesweeper"
description = "A simple cli-based minesweeper game"
author = "BelimFaux"
version = "0.1.0"
edition = "2024"

[lib]
name = "minesweeper"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.8.5"
termion = "4.0.3"

[lints.clippy]
all = "deny"
pedantic = "deny"
