[package]
name = "minesweeper-tui"
description = "A simple tui minesweeper game"
authors = ["BelimFaux"]
license-file = "LICENSE"
version = "0.2.0"
edition = "2024"

[lib]
name = "minesweeper"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.8.5"
termion = "4.0.3"

[lints.clippy]
all = "deny"
pedantic = "deny"
